  Property.getTypeClass() added
  EntityLookupModel.setSelectedEntities() now simply returns if the state does not change (only applies when no entities are selected)
  TableSorter no longer defines a empty string as null
  TableSorter.columnComparators field and setColumnComparator() removed for now
  Entity.Proxy.getTableValue() removed, derived properties fit the bill where needed
  ValueMap.initializeValue() added
  Entity.initializeValue() added
  EntityResultPacker uses the above
  EntityDbConnection uses the above
  DbConnectionPool.creatingConnection added
  ValueChangeMapImpl.setValue() refactored, updateModifiedState() added
  ValueChangeMapEditModel.isNullable() overloaded
  EntityEditModel.isPropertyNullable() removed (replaced by the above)
  Entity.initializeValue() now propagates denormalized values
  Entity.propagateReferenceValues(), initialization parameter added
  Entity.getFormattedDateValue() removed, getFormattedValue() handles it
  Entity.Proxy.getValueAsString() changed to getFormattedValue()
  Entity.isValueNull() added
  PropertyValueListProvider, added getters
  Database.addConnectionProperties() added
  DbConnection.execute(List<String>) added
  EntityDbConnection.execute() renamed to executeStatements to avoid overriding the above
  EntitySelectCriteria.setFetchDepthForAll() added
  EntityDbConnection.checkIfModified() now uses 0 foreign key fetch depth
  EntityDbConnection.checkIfModified() now only checks properties found in the current selected entity, to prevent denormalized property confusion due to the above fetch depth issue (which means no denorm. values are set)
  FindBugs run
  Entity.loaded field removed
  EntityResultPacker now sets denormalized values
  Entity.initializeValue() does not propagate denormalized values anymore
  ClientMonitor/Panel renamed to ClientUserMonitor/Panel, UserMonitor and UserInstanceMonitor (and panels) removed